Bug 86092 - [HSW/BDW]igt/kms_plane sporadically causes WARNING: at drivers/gpu/drm/i915/intel_uncore.c:705 hsw_unclaimed_reg_debug.isra.11+0x62/0x72 [i915]()
Summary: [HSW/BDW]igt/kms_plane sporadically causes WARNING: at drivers/gpu/drm/i915/i...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-10 06:32 UTC by lu hua
Modified: 2017-10-06 14:34 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (122.01 KB, text/plain)
2014-11-10 06:32 UTC, lu hua
no flags Details
dmesg with i915.mmio_debug=1 (124.84 KB, text/plain)
2014-11-24 07:34 UTC, lu hua
no flags Details
dmesg with patch (124.92 KB, text/plain)
2014-11-25 04:42 UTC, lu hua
no flags Details

Description lu hua 2014-11-10 06:32:23 UTC
Created attachment 109187 [details]
dmesg

==System Environment==
--------------------------
Regression: not sure 
Non-working platforms: BDW

==kernel==
--------------------------
drm-intel-nightly/b921a5e434f541c6d96378838df47b4259cc3489

==Bug detailed description==
Test on BDW with -nightly kernel, it sporadically causes WARNING: at drivers/gpu/drm/i915/intel_uncore.c:705 hsw_unclaimed_reg_debug.isra.11+0x62/0x72 [i915](), fail rate: 2/5. 
Run 5 cycles on -queued kernel and -fixes kernel, it works well. 
On automation testing, HSW with -fixes kernel also has this issue.

dmesg:
<3>[  103.610991] [drm:hsw_unclaimed_reg_detect.isra.7 [i915]] *ERROR* Unclaimed register detected. Please use the i915.mmio_debug=1 to debug this problem.
<3>[  103.611003] [drm:hsw_unclaimed_reg_detect.isra.7 [i915]] *ERROR* Unclaimed register detected. Please use the i915.mmio_debug=1 to debug this problem.<7>[  103.611005] [drm:pipe_crc_set_source] stopping CRCs for pipe B
<3>[  103.613052] [drm:hsw_unclaimed_reg_detect.isra.7 [i915]] *ERROR* Unclaimed register detected. Please use the i915.mmio_debug=1 to debug this problem.

dmesg with i915.mmio_debug=1:
[  116.773446] WARNING: CPU: 0 PID: 4676 at drivers/gpu/drm/i915/intel_uncore.c:705 hsw_unclaimed_reg_debug.isra.11+0x62/0x72 [i915]()
[  116.773452] Unclaimed register detected after writing to register 0x61050
[  116.773453] Modules linked in: battery parport_pc parport dm_mod ac acpi_cpufreq i915 button video drm_kms_helper drm cfbfillrect cfbimgblt cfbcopyarea
[  116.773464] CPU: 0 PID: 4676 Comm: kms_plane Not tainted 3.18.0-rc3_drm-intel-nightly_b921a5_20141110+ #1378
[  116.773469]  0000000000000000 0000000000000009 ffffffff81789002 ffff8800a758fdb8
[  116.773471]  ffffffff810368cc ffff8800a7cdf000 ffffffffa00bd47f 0000000000000001
[  116.773473]  ffff880002e80060 0000000000061050 ffffc90010a61050 00000000c0000000
[  116.773478] Call Trace:
[  116.773484]  [<ffffffff81789002>] ? dump_stack+0x41/0x51
[  116.773492]  [<ffffffff810368cc>] ? warn_slowpath_common+0x78/0x90
[  116.773505]  [<ffffffffa00bd47f>] ? hsw_unclaimed_reg_debug.isra.11+0x62/0x72 [i915]
[  116.773511]  [<ffffffff8103697c>] ? warn_slowpath_fmt+0x45/0x4a
[  116.773524]  [<ffffffffa00bd47f>] ? hsw_unclaimed_reg_debug.isra.11+0x62/0x72 [i915]
[  116.773540]  [<ffffffffa00bda98>] ? gen8_write32+0xea/0x11a [i915]
[  116.773549]  [<ffffffffa00950c4>] ? display_crc_ctl_write+0x5ad/0x8b5 [i915]
[  116.773553]  [<ffffffff8110c627>] ? vfs_write+0xb0/0x183
[  116.773555]  [<ffffffff8110c8fe>] ? SyS_write+0x41/0x84
[  116.773559]  [<ffffffff8178e692>] ? system_call_fastpath+0x12/0x17
[  116.773561] ---[ end trace a96c0bc697cb22eb ]---


output:
IGT-Version: 1.8-gc049c39 (x86_64) (Linux: 3.18.0-rc3_drm-intel-nightly_b921a5_20141110+ x86_64)
Testing connector eDP-1 using pipe B plane 1
Subtest plane-panning-bottom-right-pipe-B-plane-1: SUCCESS (3.348s)

==Reproduce steps==
---------------------------- 
1. ./kms_plane --run-subtest plane-panning-bottom-right-pipe-B-plane-1
Comment 1 Daniel Vetter 2014-11-20 16:08:13 UTC
Please boot with i915.mmio_debug=1 and drm.debug=0xe reproduce the issue then attach the complete dmesg.
Comment 2 lu hua 2014-11-24 07:34:27 UTC
Created attachment 109927 [details]
dmesg with i915.mmio_debug=1
Comment 3 Daniel Vetter 2014-11-24 15:24:28 UTC
Please apply the following two patches:

Kernel: http://patchwork.freedesktop.org/patch/37387/
igt: http://patchwork.freedesktop.org/patch/37388/

and then retest.
Comment 4 Daniel Vetter 2014-11-24 20:43:48 UTC
Kernel patch was buggy, please use this one instead:

http://patchwork.freedesktop.org/patch/37468/

And still also apply the igt patch: http://patchwork.freedesktop.org/patch/37388/
Comment 5 lu hua 2014-11-25 04:42:31 UTC
Created attachment 109977 [details]
dmesg with patch

(In reply to Daniel Vetter from comment #4)
> Kernel patch was buggy, please use this one instead:
> 
> http://patchwork.freedesktop.org/patch/37468/
> 
> And still also apply the igt patch:
> http://patchwork.freedesktop.org/patch/37388/

Apply these 2 patches, run 5 cycles, it works well.
Comment 6 Daniel Vetter 2014-11-25 13:54:20 UTC
Ok, slightly revised kernel patch has now also landed:

commit 98c815f8cf4a2899b2198924b29286a2834bf494
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Tue Nov 25 14:00:40 2014 +0100

    drm/i915: Handle runtime pm in the CRC setup code
Comment 7 lu hua 2014-11-27 07:05:41 UTC
Verified.Fixed.
Comment 8 Elizabeth 2017-10-06 14:34:01 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.